--- a/Ch4-MNIST/ch4.ipynb
+++ b/Ch4-MNIST/ch4.ipynb
@@ -793,9 +793,9 @@
    "source": [
     "**Important notes**\n",
     "\n",
-    "#1. The output activations of w1 (the second parameter in the first linear function) needs to be the same as the input activations of w2. Here, we have 30 to make sure that our layer can construct 30 different features. We can change this number to make our model more or less complex.\n",
+    "1. The output activations of w1 (the second parameter in the first linear function) needs to be the same as the input activations of w2. Here, we have 30 to make sure that our layer can construct 30 different features. We can change this number to make our model more or less complex.\n",
     "\n",
-    "#2. The simple neural network is our new model. It is our objective function! "
+    "2. The simple neural network is our new model. It is our objective function! "
    ]
   },
   {
