--- a/Ch4-MNIST/ch4.ipynb
+++ b/Ch4-MNIST/ch4.ipynb
@@ -137,7 +137,7 @@
     "Rank 0 Tensor: a scalar \n",
     "Rank 1 Tensor: a vector \n",
     "Rank 2 Tensor: a matrix \n",
-    "Rank 3 Tensor: a \"cube\" of matrixes. A way of thinking about this is that we have layers of matrixes superposed to form a cube.\n",
+    "Rank 3 Tensor: a \"cube\" of matrices. A way of thinking about this is that we have layers of matrices superposed to form a cube.\n",
     "\n",
     "**Shape**\\\n",
     "This gives us more insight into how our tensor looks. \n",
@@ -148,7 +148,7 @@
     "A tensor with shape $N \\times M$ is a matrix with n rows and m columns. \\\n",
     "Ex: $ A = \\begin{bmatrix} 1 & 2 \\\\ 3 & 4 \\end{bmatrix}$ is a tensor with shape $2 \\times 2$. \n",
     "\n",
-    "A tensor with shape $N \\times M \\times P$ is p  $N \\times M$ matrixes stacked together. To represent this symbolocally, we will put matrices in a vector. \\\n",
+    "A tensor with shape $N \\times M \\times P$ is p  $N \\times M$ matrices stacked together. To represent this symbolocally, we will put matrices in a vector. \\\n",
     "Ex: $ T = \\langle \\begin{bmatrix} 1 & 2 \\\\ 3 & 4 \\end{bmatrix}, \\begin{bmatrix} 1 & 2 \\\\ 3 & 4 \\end{bmatrix} , \\begin{bmatrix} 1 & 2 \\\\ 3 & 4 \\end{bmatrix}  \\rangle$ is a tensor with shape $ 2 \\times 2 \\times 3$. "
    ]
   },
