--- a/NLP/nlp-transformers.ipynb
+++ b/NLP/nlp-transformers.ipynb
@@ -104,7 +104,7 @@
     "- *Tokenization*: we split text up into tokens\n",
     "- *Numericalization*: convert each token into a number\n",
     "\n",
-    "This process is model dependent. Each model will have a tokenizer associated with it. We'll see when developing our Dickens classifier. We'll use the \"Deberta v3-small\" model developed by Microsoft. "
+    "This process is model dependent. Each model will have a tokenizer associated with it. We'll see when developing our Dickens classifier."
    ]
   },
   {
@@ -241,14 +241,6 @@
     ")\n",
     "dataloaders"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9fa9baea",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -434,25 +426,6 @@
    "outputs": [],
    "source": [
     "classifier(\"Joe was evidently made uncomfortable by what he supposed to be my loss of appetite, and took a thoughtful bite out of his slice, which he didn’t seem to enjoy. He turned it about in his mouth much longer than usual, pondering over it a good deal, and after all gulped it down like a pill. He was about to take another bite, and had just got his head on one side for a good purchase on it, when his eye fell on me, and he saw that my bread and butter was gone.\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f7c4de53",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3df8baa2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import torch\n",
-    "\n",
-    "device = torch.device(\"mps\" if torch.backends.mps.is_available() else \"cpu\")\n",
-    "model.to(device)"
    ]
   }
  ],
