--- a/mnist/ch4.ipynb
+++ b/mnist/ch4.ipynb
@@ -1792,7 +1792,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "jupyter",
+   "display_name": "pytorch",
    "language": "python",
    "name": "python3"
   },
