minor acceleration edit

--- a/convolutions/cnn.ipynb
+++ b/convolutions/cnn.ipynb
@@ -216,10 +216,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
    "id": "7e3a098e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mps\n"
+     ]
+    }
+   ],
    "source": [
     "#Choosing our device for acceleration \n",
     "if torch.cuda.is_available(): #For NVIDIA GPU\n",
@@ -227,7 +235,9 @@
     "elif torch.backends.mps.is_available(): #For MAC OS\n",
     "    device = torch.device(\"mps\")\n",
     "else:\n",
-    "    device = torch.device(\"cpu\")"
+    "    device = torch.device(\"cpu\")\n",
+    "\n",
+    "print(device)"
    ]
   },
   {
